<?xml version="1.0"?>
<package>
  <name>ros_verification</name>
  <version>0.0.1</version>
  <description>The ros_verification package</description>
  <maintainer email="hildebrandt.carl@outlook.com">Carl Hildebrandt</maintainer>
  <license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
  
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>

</package>